deployment/app/apigateway/apply.template.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: apigateway
  name: apigateway
  namespace: kc
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      serviceAccountName: kc
      containers:
        - name: app
          image: "docker-registry.protodesign.cn:35000/apigateway:$version_tag"
          imagePullPolicy: Always
          ports:
            - containerPort: 10000
              name: web
              protocol: TCP
          resources: { }
          startupProbe:
            failureThreshold: 300
            httpGet:
              path: /health_check
              port: 10000
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health_check
              port: 10000
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health_check
              port: 10000
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          volumeMounts:
            - name: apigateway-config
              mountPath: /app/config
              readOnly: true
            - name: jwt-config
              mountPath: /app/common/jwt/config
              readOnly: true
            - name: snowflake-config
              mountPath: /app/common/snowflake/config
              readOnly: true
            - name: storage-config
              mountPath: /app/common/storage/config
              readOnly: true
            - name: mongo-config
              mountPath: /app/common/mongo/config
              readOnly: true
            - name: redis-config
              mountPath: /app/common/redis/config
              readOnly: true
      volumes:
        - name: apigateway-config
          secret:
            secretName: apigateway-config
        - name: jwt-config
          secret:
            secretName: jwt-config
        - name: snowflake-config
          secret:
            secretName: snowflake-config
        - name: storage-config
          secret:
            secretName: storage-config
        - name: mongo-config
          secret:
            secretName: mongo-config
        - name: redis-config
          secret:
            secretName: redis-config
---
kind: Service
apiVersion: v1
metadata:
  name: apigateway
  namespace: kc
spec:
  selector:
    app: apigateway
  type: NodePort
  ports:
    - name: web
      port: 10000
      targetPort: 10000
      protocol: TCP
      nodePort: 31000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigateway
  namespace: kc
spec:
  ingressClassName: nginx
  rules:
    - host: protodesign.cn
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: apigateway
                port:
                  number: 10000
